tests/compile_fail/no_def_type.stderr
error: def_type is required in #[def(...)]
 --> $DIR/no_def_type.rs:5:5
  |
5 |     #[def(field_num = 1)]
  |     ^^^^^^^^^^^^^^^^^^^^^
